--- a/activities.html
+++ b/activities.html
@@ -435,7 +435,8 @@
 					<p class="uk-margin-small ">Ipse negat, ut ante dixi, luxuriosorum vitam reprehendendam, nisi plane
 						<span class="uk-label bg-color-gold">fatui sint</span>, id est nisi aut cupiant aut metuant. De
 						maximma autem re <span class="uk-label bg-color-aqua">eodem</span> modo, divina mente atque
-						natura mundum universum et eius maxima partis administrari.</p>
+						natura mundum universum et eius maxima partis administrari.
+					</p>
 				</div>
 			</div>
 
@@ -584,8 +585,8 @@
 	<script src="js/jquery.js"></script>
 	<script src="js/uikit.min.js"></script>
 	<script src="js/uikit-icons.min.js"></script>
-	<script type="text/javascript"
-		src="http://maps.google.com/maps/api/js?key=AIzaSyBGb3xrNtz335X4G2KfoOXb-XuIyHAzlVo"></script>
+	<!-- <script type="text/javascript"
+		src="http://maps.google.com/maps/api/js?key=AIzaSyBGb3xrNtz335X4G2KfoOXb-XuIyHAzlVo"></script> -->
 	<script src="js/jquery.gmap.min.js"></script>
 	<script src="js/tiny-date-picker.min.js"></script>
 	<script src="js/jquery.parallax.min.js"></script>
